CREATE SCHEMA IF NOT EXISTS ezecream_05;

SET search_path TO ezecream_05;

CREATE TABLE IF NOT EXISTS Customer (
    customer_id SERIAL PRIMARY KEY,
    first_name VARCHAR(50) NOT NULL,
    last_name VARCHAR(50) NOT NULL,
    personal_nubmer CHAR(12),
    email VARCHAR(255) NOT NULL,
    address VARCHAR(100) NOT NULL
);

-- SELECT * FROM ezecream_05.customer; 

CREATE TABLE IF NOT EXISTS Orders (
    order_id SERIAL PRIMARY KEY,
    customer_id INTEGER NOT NULL ,
    order_date DATE DEFAULT CURRENT_TIMESTAMP ,
    FOREIGN KEY (customer_id) REFERENCES Customer (customer_id)
);

-- TO DO: implement the rest of the physical logical diagram